Potentially fixing rounded search form issue on mobile

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -53,6 +53,7 @@
         color: inherit;
         border: none;
         border-bottom: 1px solid;
+        border-radius: 0pt;
     }
 
     button[type="submit"] {
@@ -62,5 +63,6 @@
         border: none;
         border-bottom: 1px solid;
         border-color: inherit;
+        border-radius: 0pt;
     }
 }
